Animation control buttons now work.
Closes: #5
Issue: #2

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,9 @@
 			<input id="AnimationSlider" type="range" min="0" v-bind:max="dateList.length" value="0">
 			<div id="ControlButtonsContainer">
 				<button id="BtnSeekStart" type="button">|&lt;</button>
-				<button id="BtnPlay" type="button">></button>
+				<button id="BtnStepBack" type="button">&lt;</button>
+				<button id="BtnPlay" type="button">&#9658;</button>
+				<button id="BtnStepForward" type="button">></button>
 				<button id="BtnPause" type="button">||</button>
 				<button id="BtnSeekEnd" type="button">>|</button>
 			</div>
