Added a bunch of styling and a spot for config control.
Issue: #2, #8, #13

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	
-    <title>COVID-19 By County</title>
+    <title>COVID-19 by County</title>
 	<link rel="stylesheet" type="text/css" href="styles/index.css" />
 </head>
 <body>
 	<div v-cloak id="Everything">
-		<h1>COVID-19 By County</h1>
+		<h1>COVID-19 by U.S. County: <span id="ConfigPhrase">Cumulative Cases Per 100,000 People</span></h1>
 
 		<div id="ColumnsContainer">
 			<div id="MapColumn">
@@ -74,298 +74,11 @@
 						</tbody>
 					</table>
 				</div>
-				<!--
-				<div class="InformationCard">
-					<h4>Cook County, Illinois</h4>
-					<table class="CountyInfoCardTable">
-						<thead>
-							<tr>
-								<th></th>
-								<th>Absolute</th>
-								<th>Per 100,000<br>People</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>Confirmed Cases</td>
-								<td>4,000</td>
-								<td>386.90</td>
-							</tr>
-							<tr>
-								<td>Deaths</td>
-								<td>400</td>
-								<td>38.69</td>
-							</tr>
-							<tr>
-								<td>Deaths / Confirmed Case</td>
-								<td>0.10</td>
-								<td>n/a</td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-				<div class="InformationCard">
-					<h4>Sangamon County, Illinois</h4>
-					<table class="CountyInfoCardTable">
-						<thead>
-							<tr>
-								<th></th>
-								<th>Absolute</th>
-								<th>Per 100,000<br>People</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>Confirmed Cases</td>
-								<td>4,000</td>
-								<td>386.90</td>
-							</tr>
-							<tr>
-								<td>Deaths</td>
-								<td>400</td>
-								<td>38.69</td>
-							</tr>
-							<tr>
-								<td>Deaths / Confirmed Case</td>
-								<td>0.10</td>
-								<td></td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-				<div class="InformationCard">
-					<h4>McHenry County, Illinois</h4>
-					<table class="CountyInfoCardTable">
-						<thead>
-							<tr>
-								<th></th>
-								<th>Absolute</th>
-								<th>Per 100,000<br>People</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>Confirmed Cases</td>
-								<td>4,000</td>
-								<td>386.90</td>
-							</tr>
-							<tr>
-								<td>Deaths</td>
-								<td>400</td>
-								<td>38.69</td>
-							</tr>
-							<tr>
-								<td>Deaths / Confirmed Case</td>
-								<td>0.10</td>
-								<td></td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-				<div class="InformationCard">
-					<h4>Cook County, Illinois</h4>
-					<table class="CountyInfoCardTable">
-						<thead>
-							<tr>
-								<th></th>
-								<th>Absolute</th>
-								<th>Per 100,000<br>People</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>Confirmed Cases</td>
-								<td>4,000</td>
-								<td>386.90</td>
-							</tr>
-							<tr>
-								<td>Deaths</td>
-								<td>400</td>
-								<td>38.69</td>
-							</tr>
-							<tr>
-								<td>Deaths / Confirmed Case</td>
-								<td>0.10</td>
-								<td></td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-				<div class="InformationCard">
-					<h4>Sangamon County, Illinois</h4>
-					<table class="CountyInfoCardTable">
-						<thead>
-							<tr>
-								<th></th>
-								<th>Absolute</th>
-								<th>Per 100,000<br>People</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>Confirmed Cases</td>
-								<td>4,000</td>
-								<td>386.90</td>
-							</tr>
-							<tr>
-								<td>Deaths</td>
-								<td>400</td>
-								<td>38.69</td>
-							</tr>
-							<tr>
-								<td>Deaths / Confirmed Case</td>
-								<td>0.10</td>
-								<td></td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-				<div class="InformationCard">
-					<h4>McHenry County, Illinois</h4>
-					<table class="CountyInfoCardTable">
-						<thead>
-							<tr>
-								<th></th>
-								<th>Absolute</th>
-								<th>Per 100,000<br>People</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>Confirmed Cases</td>
-								<td>4,000</td>
-								<td>386.90</td>
-							</tr>
-							<tr>
-								<td>Deaths</td>
-								<td>400</td>
-								<td>38.69</td>
-							</tr>
-							<tr>
-								<td>Deaths / Confirmed Case</td>
-								<td>0.10</td>
-								<td></td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-				<div class="InformationCard">
-					<h4>Cook County, Illinois</h4>
-					<table class="CountyInfoCardTable">
-						<thead>
-							<tr>
-								<th></th>
-								<th>Absolute</th>
-								<th>Per 100,000<br>People</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>Confirmed Cases</td>
-								<td>4,000</td>
-								<td>386.90</td>
-							</tr>
-							<tr>
-								<td>Deaths</td>
-								<td>400</td>
-								<td>38.69</td>
-							</tr>
-							<tr>
-								<td>Deaths / Confirmed Case</td>
-								<td>0.10</td>
-								<td></td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-				<div class="InformationCard">
-					<h4>Sangamon County, Illinois</h4>
-					<table class="CountyInfoCardTable">
-						<thead>
-							<tr>
-								<th></th>
-								<th>Absolute</th>
-								<th>Per 100,000<br>People</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>Confirmed Cases</td>
-								<td>4,000</td>
-								<td>386.90</td>
-							</tr>
-							<tr>
-								<td>Deaths</td>
-								<td>400</td>
-								<td>38.69</td>
-							</tr>
-							<tr>
-								<td>Deaths / Confirmed Case</td>
-								<td>0.10</td>
-								<td></td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-				<div class="InformationCard">
-					<h4>McHenry County, Illinois</h4>
-					<table class="CountyInfoCardTable">
-						<thead>
-							<tr>
-								<th></th>
-								<th>Absolute</th>
-								<th>Per 100,000<br>People</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>Confirmed Cases</td>
-								<td>4,000</td>
-								<td>386.90</td>
-							</tr>
-							<tr>
-								<td>Deaths</td>
-								<td>400</td>
-								<td>38.69</td>
-							</tr>
-							<tr>
-								<td>Deaths / Confirmed Case</td>
-								<td>0.10</td>
-								<td></td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-				<div class="InformationCard">
-					<h4>McHenry County, Illinois</h4>
-					<table class="CountyInfoCardTable">
-						<thead>
-							<tr>
-								<th></th>
-								<th>Absolute</th>
-								<th>Per 100,000<br>People</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>Confirmed Cases</td>
-								<td>4,000</td>
-								<td>386.90</td>
-							</tr>
-							<tr>
-								<td>Deaths</td>
-								<td>400</td>
-								<td>38.69</td>
-							</tr>
-							<tr>
-								<td>Deaths / Confirmed Case</td>
-								<td>0.10</td>
-								<td></td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-			-->
+			</div>
+
+			<div id="InstructionPanel">
+				Click on individual counties to show them in the side panel.<br>
+				Change facts and views and animate.
 			</div>
 		</div>
 
