--- a/src/index.html
+++ b/src/index.html
@@ -86,9 +86,8 @@
 			<div id="WaitMessageBox">{{ waitMessage }}</div>
 		</div>
 	</div>
-	<script type="text/javascript" src="/components/vue.js"></script>
-	<script type="text/javascript" src="/components/papaparse.js"></script>
-	<script type="text/javascript" src="/components/Concert.js"></script>
-	<script type="text/javascript" src="/scripts/app.js"></script>
+	
+	<script type="text/javascript" src="/scripts/papaparse.js"></script>
+	<script type="module" src="/modules/appUI.js"></script>
 </body>
 </html>
