Reports can now be run on all fact types and view types.
Closes: #9

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div v-cloak id="Everything">
-		<h1>COVID-19 by U.S. County: <span id="ConfigPhrase">Cumulative Cases Per 100,000 People</span></h1>
+		<h1>COVID-19 by U.S. County: <span id="ConfigPhrase">Cumulative Cases (Total)</span></h1>
 
 		<div id="ColumnsContainer">
 			<div id="MapColumn">
@@ -86,7 +86,7 @@
 			<div id="WaitMessageBox">{{ waitMessage }}</div>
 		</div>
 	</div>
-	
+
 	<script type="text/javascript" src="/scripts/papaparse.js"></script>
 	<script type="module" src="/modules/appUI.js"></script>
 </body>
