--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
 	<div v-cloak id="Everything">
-		<h1>COVID-19 by U.S. County: <span id="ConfigPhrase">Cumulative Cases (Total)</span></h1>
-
 		<div id="ColumnsContainer">
 			<div id="MapColumn">
+				<div>
+					<h1>COVID-19 by U.S. County: <span id="ConfigPhrase">{{ mapConfigPhrase }}</span></h1>
+				</div>
+
 				<div id="MapContainer">
 					<object id="SvgObject" type="image/svg+xml" data="/images/Usa_counties_large.svg">
 						Browser not supported.
@@ -41,44 +43,56 @@
 					<button id="BtnSeekEnd" type="button">>|</button>
 				</div>
 			</div>
-			<div id="InformationPanel">
-				<div class="InformationCard TitleCard">
-					<h3>{{ displayDate }}</h3>
-				</div>
-				<div v-for="item in infoCards" class="InformationCard">
-					<h4>{{ item.placeName }}</h4>
-					<table class="CountyInfoCardTable">
-						<thead>
-							<tr>
-								<th></th>
-								<th>{{ item.col1Title }}</th>
-								<th>{{ item.col2Title }}</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>{{ item.row1Title }}</td>
-								<td>{{ item.row1Data1 }}</td>
-								<td>{{ item.row1Data2 }}</td>
-							</tr>
-							<tr>
-								<td>{{ item.row2Title }}</td>
-								<td>{{ item.row2Data1 }}</td>
-								<td>{{ item.row2Data2 }}</td>
-							</tr>
-							<tr>
-								<td>{{ item.row3Title }}</td>
-								<td>{{ item.row3Data1 }}</td>
-								<td>{{ item.row3Data2 }}</td>
-							</tr>
-						</tbody>
+			
+			<div id="InformationColumn">
+				<div id="RangeKeyPanel">
+					<table>
+						<tr>
+							<td><div id="MaxRangeColorKey" class="ColorKey" v-bind:style="{ backgroundColor: colorMaxRange }"></div></td>
+							<td>= Max value in color gradation range ({{ maxDisplayValue }})</td>
+						</tr>
+						<tr>
+							<td><div id="ExceededRangeColorKey" class="ColorKey" v-bind:style="{ backgroundColor: colorExceededRange }"></div></td>
+							<td>= Exceeds color gradation range (>{{ maxDisplayValue }})</td>
+						</tr>
 					</table>
+					<div>Overall max value found: {{ maxOverallValue }}</div>
 				</div>
-			</div>
-
-			<div id="InstructionPanel">
-				Click on individual counties to show them in the side panel.<br>
-				Change facts and views and animate.
+	
+				<div id="InformationPanel">
+					<div class="InformationCard TitleCard">
+						<h3>{{ displayDate }}</h3>
+					</div>
+					<div v-for="item in infoCards" class="InformationCard">
+						<h4>{{ item.placeName }}</h4>
+						<table class="CountyInfoCardTable">
+							<thead>
+								<tr>
+									<th></th>
+									<th>{{ item.col1Title }}</th>
+									<th>{{ item.col2Title }}</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>{{ item.row1Title }}</td>
+									<td>{{ item.row1Data1 }}</td>
+									<td>{{ item.row1Data2 }}</td>
+								</tr>
+								<tr>
+									<td>{{ item.row2Title }}</td>
+									<td>{{ item.row2Data1 }}</td>
+									<td>{{ item.row2Data2 }}</td>
+								</tr>
+								<tr>
+									<td>{{ item.row3Title }}</td>
+									<td>{{ item.row3Data1 }}</td>
+									<td>{{ item.row3Data2 }}</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
 			</div>
 		</div>
 
