--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 				</div>
 
 				<div id="MapContainer">
-					<object id="SvgObject" type="image/svg+xml" data="/images/Usa_counties_large.svg">
+					<object id="SvgObject" type="image/svg+xml" data="images/Usa_counties_large.svg">
 						Browser not supported.
 					</object>
 				</div>
@@ -149,7 +149,7 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="/scripts/papaparse.js"></script>
-	<script type="module" src="/modules/appUI.js"></script>
+	<script type="text/javascript" src="scripts/papaparse.js"></script>
+	<script type="module" src="modules/appUI.js"></script>
 </body>
 </html>
