File version and location-type changes.

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 				</div>
 
 				<div id="MapContainer">
-					<object id="SvgObject" type="image/svg+xml" data="images/Usa_counties_large.svg">
+					<object id="SvgObject" type="image/svg+xml" data="images/Usa_counties_large.svg?ver=3">
 						Browser not supported.
 					</object>
 				</div>
