Starting work toward map controls.
Issue: #4, #2

--- a/src/index.html
+++ b/src/index.html
@@ -100,6 +100,8 @@
 					<div class="InformationCard DataCard">
 						<span style="font-size: smaller;">To Add: ability to add and remove these info cards by clicking on the map.</span>
 					</div>
+					<div id="tempconsole" class="InformationCard DataCard">
+					</div>
 				</div>
 			</div>
 		</div>
