Map can now be repositioned by dragging.
Issue: #4, #2

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
 					<object id="SvgObject" type="image/svg+xml" data="images/Usa_counties_large.svg?ver=3">
 						Browser not supported.
 					</object>
+					<img id="DragMap" src="images/Usa_counties_large.png">
 				</div>
 
 				<div id="TimelineContainer">
