Map can be zoomed with buttons or scroll wheel.
Known problem: panning image no longer works.

Issue: #4, #2

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,11 @@
 						Browser not supported.
 					</object>
 					<img id="DragMap" src="images/Usa_counties_large.png">
+					<div id="ZoomButtonContainer">
+						<button id="BtnZoomIn" type="button">+</button>
+						<button id="BtnZoomOut" type="button">-</button>
+						<button id="BtnZoomFull" type="button">&#9635</button>
+					</div>
 				</div>
 
 				<div id="TimelineContainer">
