Zoom can be controlled by keyboard now.
Bug in window when-loaded-run-this function also fixed.

Double-click zoom removed to make room for double-clicking
to add info cards.

Issue: #2
Closes: #4
Closes: #33

--- a/src/index.html
+++ b/src/index.html
@@ -107,6 +107,7 @@
 						<span style="font-size: smaller;">To Add: ability to add and remove these info cards by clicking on the map.</span>
 					</div>
 					<div id="tempconsole" class="InformationCard DataCard">
+						<div v-for="item in consoleEntries">{{ item }}</div>
 					</div>
 				</div>
 			</div>
