--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,9 @@
 				<div id="TimelineContainer">
 					<ul id="Timeline">
 						<li v-for="item in dateList" class="TimeLineDateBox">
-							{{ item.month }}
+							{{ item.toLocaleString("en-us", { month: "long" }) }}
 							<br>
-							{{ item.dayOfMonth }}
+							{{ item.getDate() }}
 						</li>
 					</ul>
 					<div id="TimelineFrame">
@@ -51,13 +51,13 @@
 					<button id="BtnSeekEnd" type="button">>|</button>
 				</div>
 				
-				<div id="RangeKeyPanel">
+				<div class="RangeKeyPanel">
 					<div class="ColorKeyContainer" v-for="(item, index) in colorGradients">
 						<div class="ColorKey" v-bind:style="{ backgroundImage:'linear-gradient(to right,' + item.start + ',' + item.end + ')' }"></div>
 						<div>>{{ colorRanges[index].min }} to {{ colorRanges[index].max }}</div>
 					</div>
 				</div>
-				<div id="RangeKeyPanel">
+				<div class="RangeKeyPanel">
 					<div class="ColorKeyContainer">
 						<div class="ColorKey" v-bind:style="{ backgroundColor: zeroValueColor }"></div>
 						<div>Zero Value</div>
@@ -72,7 +72,7 @@
 			<div id="InformationColumn">
 				<div id="InformationPanel">
 					<div class="InformationCard TitleCard">
-						<h3>{{ (displayDate === null) ? "" : (displayDate.month + " " + displayDate.dayOfMonth) }}</h3>
+						<h3>{{ (displayDate === null) ? "" : (displayDate.toLocaleString("en-us", { month: "long" }) + " " + displayDate.getDate()) }}</h3>
 					</div>
 					<div v-for="item in infoCards" class="InformationCard DataCard">
 						<h4>{{ item.placeName }}</h4>
@@ -103,11 +103,8 @@
 							</tbody>
 						</table>
 					</div>
-					
-					<div class="InformationCard DataCard">
-						<span style="font-size: smaller;">To Add: ability to add and remove these info cards by clicking on the map.</span>
-					</div>
-					<div id="tempconsole" class="InformationCard DataCard">
+
+					<div id="tempconsole" class="InformationCard DataCard"> <!-- REMOVE CODE HERE -->
 						<div v-for="item in consoleEntries">{{ item }}</div>
 					</div>
 				</div>
