Adjusted styles and text on config dialog box.
Issue: #8, #2

--- a/src/index.html
+++ b/src/index.html
@@ -123,10 +123,10 @@
 			<div class="ConfigurationRadioGroup">
 				<h4>Basic Fact to Report:</h4>
 				<input id="RdoFactCases" type="radio" v-bind:value="BasicFactType.Cases" v-model="configBasicFact">
-				<label for="RdoFactCases">Confirmed Cases</label>
+				<label for="RdoFactCases">Cumulative Cases</label>
 				<br>
 				<input id="RdoFactDeaths" type="radio" v-bind:value="BasicFactType.Deaths" v-model="configBasicFact">
-				<label for="RdoFactDeaths">Confirmed Deaths</label>
+				<label for="RdoFactDeaths">Cumulative Deaths</label>
 			</div>
 
 			<div class="ConfigurationRadioGroup">
