Style change to dialog box to make grouped choices more clear.
Issue: #8, #2

--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,7 @@
 						<td></td>
 					</tr>
 					<tr>
-						<td>
+						<td id="GrowthAbsoluteChoiceCell">
 							<input id="RdoViewChangeAbsolute" type="radio" v-bind:value="DataViewType.ChangeAbsolute" v-model="configDataView">
 							<label for="RdoViewChangeAbsolute">Change (Absolute)</label>
 						</td>
@@ -178,7 +178,7 @@
 							</select>
 						</td>
 					<tr>
-						<td>
+						<td id="GrowthProportionalChoiceCell">
 							<input id="RdoViewChangeProportional" type="radio" v-bind:value="DataViewType.ChangeProportional" v-model="configDataView">
 							<label for="RdoViewChangeProportional">Change (Proportional)</label>
 						</td>
