--- a/src/index.html
+++ b/src/index.html
@@ -81,25 +81,38 @@
 							<thead>
 								<tr>
 									<th></th>
+									<th></th>
 									<th>Absolute</th>
 									<th>{{ cardCol2Title }}</th>
+									<th>Per Case</th>
 								</tr>
 							</thead>
 							<tbody>
 								<tr>
-									<td>Confirmed Cases</td>
+									<th rowspan="2">CASES</th>
+									<th>total</th>
 									<td>{{ item.casesAbsolute }}</td>
 									<td>{{ parseFloat(item.casesByPopulation).toPrecision(8) }}</td>
+									<td>-</td>
 								</tr>
 								<tr>
-									<td>Deaths</td>
+									<th>7-day change</th>
+									<td>0000</td>
+									<td>0000</td>
+									<td>-</td>
+								</tr>
+								<tr class="DeathRow">
+									<th rowspan="2">DEATHS</th>
+									<th>total</th>
 									<td>{{ item.deathsAbsolute }}</td>
 									<td>{{ parseFloat(item.deathsByPopulation).toPrecision(8) }}</td>
+									<td>{{ parseFloat(item.deathsPerCase).toPrecision(8) }}</td>
 								</tr>
 								<tr>
-									<td>Deaths / Confirmed Case</td>
-									<td>{{ parseFloat(item.deathsPerCase).toPrecision(8) }}</td>
-									<td></td>
+									<th>7-day change</th>
+									<td>0000</td>
+									<td>0000</td>
+									<td>0000</td>
 								</tr>
 							</tbody>
 						</table>
